force-app/main/default/objects/ffr__DataViewField__c/ffr__DataViewField__c.object-meta.xml
<CustomObject>
    <description>Stores details of a field that has been added to a dataview.</description>
    <label>Dataview Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataview Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>