force-app/main/default/objects/ffr__DataViewField__c/fields/ffr__Aggregatable__c.field-meta.xml
<CustomField>
    <fullName>ffr__Aggregatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregatable</label>
    <type>Checkbox</type>
</CustomField>