force-app/main/default/objects/ffr__DataViewField__c/fields/ffr__CommonName__c.field-meta.xml
<CustomField>
    <fullName>ffr__CommonName__c</fullName>
    <label>Common Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Period</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>