force-app/main/default/objects/ffr__DataViewField__c/fields/ffr__DataViewJoin__c.field-meta.xml
<CustomField>
    <fullName>ffr__DataViewJoin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DataView Join</label>
    <referenceTo>ffr__DataViewJoin__c</referenceTo>
    <relationshipLabel>DataView Fields</relationshipLabel>
    <relationshipName>DataViewFields</relationshipName>
    <type>Lookup</type>
</CustomField>