force-app/main/default/objects/ffr__DataViewField__c/fields/ffr__Presentable__c.field-meta.xml
<CustomField>
    <fullName>ffr__Presentable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presentable</label>
    <type>Checkbox</type>
</CustomField>