force-app/main/default/objects/ffr__DataViewField__c/fields/ffr__Reversible__c.field-meta.xml
<CustomField>
    <fullName>ffr__Reversible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversible</label>
    <type>Checkbox</type>
</CustomField>