force-app/main/default/objects/ffr__DataViewField__c/fields/ffr__Selectable__c.field-meta.xml
<CustomField>
    <fullName>ffr__Selectable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selectable</label>
    <type>Checkbox</type>
</CustomField>